CMAKE_MINIMUM_REQUIRED(VERSION 3.31.12)
SET(LIB_VERSION 1.0.0)

SET(LIB_ID threadx-cpp)

IF (GEN_DOCS MATCHES ON)
    SET(DOXYGEN_FOUND "NO")
    SET(DOXYGEN_VERSION "0")
    FIND_PACKAGE(Doxygen
                 COMPONENTS dot
                 OPTIONAL_COMPONENTS mscgen dia)

    IF (DOXYGEN_FOUND AND ${DOXYGEN_VERSION} STRGREATER_EQUAL "1.9.8")
        SET(DOXYGEN_PROJECT_NAME "ThreadX Library")
        SET(DOXYGEN_PROJECT_BRIEF "")
        SET(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/doc/doxygen)
        SET(DOXYGEN_JAVADOC_AUTOBRIEF YES)
        SET(DOXYGEN_OPTIMIZE_OUTPUT_FOR_C YES)
        SET(DOXYGEN_EXTRACT_ALL YES)
        SET(DOXYGEN_GENERATE_TREEVIEW YES)

        FILE(GLOB HEADER_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/${LIB_ID}/*.hpp)
        DOXYGEN_ADD_DOCS(docs ${HEADER_FILES} ALL)
    ENDIF ()
    RETURN()
ENDIF ()

#azure rtos variables
STRING(TOLOWER ${CMAKE_C_COMPILER_ID} COMPILER_ID)
SET(THREADX_TOOLCHAIN ${COMPILER_ID})

IF (MCU_ARCH STREQUAL cortex-m0 OR MCU_ARCH STREQUAL cortex-m0plus)
    SET(THREADX_ARCH "cortex_m0")
    SET(FILEX_ARCH ${THREADX_ARCH})
ELSEIF (MCU_ARCH STREQUAL cortex-m3)
    SET(THREADX_ARCH "cortex_m3")
    SET(FILEX_ARCH ${THREADX_ARCH})
ELSEIF (MCU_ARCH STREQUAL cortex-m4)
    SET(THREADX_ARCH "cortex_m4")
    SET(FILEX_ARCH ${THREADX_ARCH})
ELSEIF (MCU_ARCH STREQUAL cortex-m7)
    SET(THREADX_ARCH "cortex_m7")
    SET(FILEX_ARCH ${THREADX_ARCH})
ELSEIF (MCU_ARCH STREQUAL cortex-m33)
    SET(THREADX_ARCH "cortex_m33")
    SET(FILEX_ARCH "cortex_m4")
ELSE ()
    MESSAGE(FATAL_ERROR "Unknown architecture")
ENDIF ()

INCLUDE(FetchContent)

SET(THREADX_SUBDIR https://github.com/eclipse-threadx)
FetchContent_Declare(threadx
                     GIT_REPOSITORY ${THREADX_SUBDIR}/threadx.git
                     GIT_TAG ${THREADX_VER}
                     SYSTEM)
FetchContent_Declare(filex
                     GIT_REPOSITORY ${THREADX_SUBDIR}/filex.git
                     GIT_TAG ${FILEX_VER}
                     SYSTEM)
FetchContent_Declare(levelx
                     GIT_REPOSITORY ${THREADX_SUBDIR}/levelx.git
                     GIT_TAG ${LEVELX_VER}
                     SYSTEM)

SET(TX_USER_FILE "${CMAKE_BINARY_DIR}/tx_user.h")
SET(FX_USER_FILE "${CMAKE_BINARY_DIR}/fx_user.h")
SET(LX_USER_FILE "${CMAKE_BINARY_DIR}/lx_user.h")

FetchContent_MakeAvailable(threadx levelx)
SET(THREADX_ARCH ${FILEX_ARCH})
FetchContent_MakeAvailable(filex)

TARGET_COMPILE_DEFINITIONS(threadx PRIVATE TX_INCLUDE_USER_DEFINE_FILE)
TARGET_COMPILE_DEFINITIONS(filex PRIVATE FX_INCLUDE_USER_DEFINE_FILE)
TARGET_COMPILE_DEFINITIONS(levelx PRIVATE LX_INCLUDE_USER_DEFINE_FILE)
SET_TARGET_PROPERTIES(threadx filex levelx PROPERTIES COMPILE_FLAGS -w)

FILE(GLOB_RECURSE LIB_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/${LIB_ID}/*.cpp)
ADD_LIBRARY(${LIB_ID} STATIC ${LIB_SOURCES})
SET_TARGET_PROPERTIES(${LIB_ID} PROPERTIES
                      VERSION ${LIB_VERSION}
                      SOVERSION 1
                     )

TARGET_COMPILE_FEATURES(${LIB_ID} PUBLIC cxx_std_23)
TARGET_INCLUDE_DIRECTORIES(${LIB_ID} INTERFACE ${CMAKE_CURRENT_LIST_DIR})
TARGET_LINK_LIBRARIES(${LIB_ID} PUBLIC threadx filex levelx)
